--- a/project-1-textutils/views/analyzed.ejs
+++ b/project-1-textutils/views/analyzed.ejs
@@ -10,19 +10,27 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Home - TextUtils</title>
+    <title><%= purpose %> - TextUtils</title>
 </head>
 
 <body>
     <%- include('partials/_navbar') %>
-    <%- include('partials/_alert') %>
+    
+    <% if (purpose) { %>
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <strong>Success!</strong> Your text has been analyzed!
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+        </div>  
+    <% } %>
 
         <div class="container my-3">
             <h2>Your text has been analyzed!!!</h2>
 
             <hr class="my-3">
 
-            <p>Your Analyzed Text Here</p>
+            <p><%= analyzedText %></p>
         </div>
 
         <!-- Optional JavaScript -->
