--- a/project-2-crud/views/delete.ejs
+++ b/project-2-crud/views/delete.ejs
@@ -16,7 +16,7 @@
         </form>
     </div>
     
-    <script src="/js/jquery-3.4.1.min.js"></script>
+    <script src="/js/jquery-3.4.1.slim.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/popper.min.js"></script>
 </body>
