--- a/project-4-codebattles/views/contact.hbs
+++ b/project-4-codebattles/views/contact.hbs
@@ -2,7 +2,7 @@
     <h1 class="text-3xl font-semibold mb-3">Contact Us</h1>
     <p class="text-slate-400 mb-3">Feel Free to Contact Us</p>
 
-    <form action="" method="post">
+    <form action="/contact" method="post">
         <div class="mb-3">
             <label for="name" class="leading-7 text-sm text-gray-600">Name</label>
             <input type="text" id="name" name="name"
